# AppliedYet

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: publish-windows.yml  sync-release-notes.yml
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/scripts/: prepare-ffmpeg.ps1  replace_colors.py
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.bundle.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer/: generate-assets.ps1
apps/desktop/src-tauri/migrations/: 001_init.sql  002_application_detail.sql  003_task_notifications.sql  004_provider_settings.sql  005_ai_pipeline.sql  006_resume_profiles.sql  007_resume_workflow.sql  008_application_event_times.sql  009_application_event_recorded_at.sql  010_app_settings.sql  011_email_pipeline.sql  012_email_sync_state_repair.sql  013_email_links.sql  014_application_stages.sql  015_interview_experiences.sql  016_interview_workflow.sql  017_email_reliability.sql  018_processing_job_imports.sql  019_processing_job_session_fk.sql  020_question_bank_domain.sql
apps/desktop/src-tauri/src/: ai.rs  asr.rs  credentials.rs  db.rs  document.rs  experience.rs  http.rs  lib.rs  main.rs  resume.rs  resume_ai.rs  system_proxy.rs
apps/desktop/src-tauri/src/commands/: ai.rs  applications.rs  email.rs  experience.rs  interviews.rs  mod.rs  processing.rs  resumes.rs  settings.rs
apps/desktop/src-tauri/src/database/: email.rs  interviews.rs  migrations.rs  mod.rs
apps/desktop/src-tauri/src/database/models/: ai.rs  mod.rs  providers.rs  resumes.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/components/: AppShell.tsx  ErrorBoundary.tsx  FeedbackCenter.tsx  NewApplicationDialog.tsx  OperationCenter.tsx  TitleBar.tsx  ui.tsx
apps/desktop/src/data/: demo.ts  mock.ts
apps/desktop/src/hooks/: useInterviewFlow.tsx  useTheme.tsx
apps/desktop/src/pages/: ApplicationDetailPage.tsx  ApplicationsPage.tsx  EmailsPage.tsx  FeaturePages.tsx  HomePage.tsx  SettingsPage.tsx  StructuredResumeSettings.tsx
apps/desktop/src/pages/interview/: MockInterviewPage.tsx  PreparationPage.tsx  QuestionBankPage.tsx  ReviewsPage.tsx
apps/desktop/src/services/: ai.ts  applications.ts  dashboard.ts  emails.ts  experience.ts  external.ts  feedback.ts  interviews.ts  notifications.ts  operations.ts  resumes.ts  settings.ts  toast.ts  updates.ts  windowTheme.ts
apps/desktop/src/styles/: index.css
apps/desktop/src/types/: index.ts
docs/: 投了吗_UI设计规范.md  投了吗_产品文档.md  投了吗_技术文档.md
