[package]
name = "tou-le-ma"
version = "0.1.0"
description = "投了吗 - 本地优先的个人求职工作台"
authors = ["TouLeMa Contributors"]
edition = "2021"

[lib]
name = "tou_le_ma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
