[package]
name = "tou-le-ma"
version = "0.1.0"
description = "投了吗 - 本地优先的个人求职工作台"
authors = ["TouLeMa Contributors"]
edition = "2021"

[lib]
name = "tou_le_ma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
pdf-extract = "0.8"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
imap = "2.4"
native-tls = "0.2"
mailparse = "0.15"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sha2 = "0.10"
base64 = "0.22"
